# uberlays

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  refx-api.patch
.github/workflows/: msbuild.yml  winbuild.yml
irsdk/: wrapper.hpp
media/tracks/hockenheim gp/: grandprix.blend
media/tracks/hungaroring/: grandprix.blend
media/tracks/interlagos gp/: Grand Prix.blend
media/tracks/montreal/: Grand Prix.blend
media/tracks/monza full/: grand prix.blend
media/tracks/monza gp/: grand prix.blend
media/tracks/nurburgring gp/: Grand Prix.blend
scripts/: blender.py
src/: head2head.rs  iracing.rs  main.rs  overlay.rs  plot.rs  track.proto  track.rs
src/iracing/: data_collector.rs  data_producer.rs  mod.rs
