[package]
name = "uberlays"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "*"
prost-build = "0.9"

[dependencies]
skulpin = { git = "https://github.com/aclysma/skulpin", default-features = false, features = ["winit-app", "winit-25"] }
log = "0.4"
env_logger = "0.6"
async-std = { version = "1.10.0", features = [ "unstable" ] }
prost = "0.9"
prost-types = "0.9"
async-trait = "0.1.52"
yaml-rust = "0.4.4"

[dependencies.windows]
version = "0.28.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
]
